@@ -18,7 +18,7 @@ Wishlist
 ========
 - Bloglines integration.
 - Semi-transparent main window when not in front.
-- Show the feed icon in the article list pane.
+- Show the feed icon in the article list pane/unified view.
 - Support retrieving and posting Atom/RSS 2.0 comments.
 - Spotlight support.
 - Change dock unread count colour and size.
